# okada-ai-integrated-pack

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README_ALL_IN_ONE.md  TASKS.md  docker-compose.yml  docs_bootstrap.md  pyproject.toml
archives/: RELEASE_INDEX.md
docs/: 26_runtime_integration_guide.md  27_env_and_secrets.md  28_acceptance_test_plan.md  29_platform_hook_reference.md  30_litellm_detailed_integration.md  31_litellm_runbook.md  32_litellm_acceptance_matrix.md  33_codegen_prompt_litellm.md  34_dify_detailed_integration.md  35_dify_runbook.md  36_dify_acceptance_matrix.md  37_codegen_prompt_dify.md  38_langgraph_detailed_integration.md  39_langgraph_runbook.md  40_langgraph_acceptance_matrix.md  41_codegen_prompt_langgraph.md  42_openwebui_detailed_integration.md  43_openwebui_runbook.md  44_openwebui_acceptance_matrix.md  45_codegen_prompt_openwebui.md  46_integrated_stack_overview.md  47_integrated_runbook.md  48_e2e_benchmark_harness.md  49_e2e_acceptance_matrix.md  50_codegen_prompt_integrated_stack.md  51_integration_gateway.md  52_local_dev_quickstart.md  53_operator_demo_flow.md  54_e2e_reporting.md  55_gateway_unified_examples.md  56_gateway_migration_runbook.md  57_gateway_acceptance_matrix.md  58_codegen_prompt_gateway_unification.md  59_dual_agent_handoff.md  60_parallel_worktree_strategy.md  61_dual_standalone_usage.md  61_openwebui_manual_eval_workflow.md  62_human_comparison_checklist.md  63_dual_standalone_runbook.md  64_initial_three_tasks_bundle.md  (+26 more)
issues/: README.md  index.yaml  parallel-matrix.md  (+2 more)
(+475 files in other folders)
