[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okada-ai-kernel"
version = "1.11.0"
description = "Bootstrap implementation of the Okada Governance Kernel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0"
]

[tool.setuptools]
package-dir = {"" = "apps/okada-kernel-service"}

[tool.setuptools.packages.find]
where = ["apps/okada-kernel-service"]

[tool.pytest.ini_options]
testpaths = ["apps/okada-kernel-service/tests"]
